Fixed MapRendering button alignment.

--- a/modules/gui/src/app/home/map/mapRendering.module.css
+++ b/modules/gui/src/app/home/map/mapRendering.module.css
@@ -3,5 +3,4 @@
     top: .5rem;
     left: .5rem;
     pointer-events: all;
-    border: 1px solid transparent; /* HACK: compensate for border in look.module.css, not used here */
 }
